--- a/gb/19/1/1/n10946842.md
+++ b/gb/19/1/1/n10946842.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lydclp3254/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lydclp3254/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lydclp3254/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lydclp3254/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lydclp3254/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lydclp3254/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lydclp3254/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新年伊始 加拿大几项重大税改生效</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/shutterstock_567805372-600x400.jpg" />
 <h6>从今年1月1日起，雇员将增缴退休金（CPP）。（Shutterstock）
@@ -16,15 +16,15 @@
 <h2>中小企业主税改</h2>
 <p>渥京去年几项中小业主税改，曾多次引起全国中小业主强烈反对，其中争议最大的税改，影响到中小业主能持有多少被动收入。被动收入是指中小业主对公账户余额自动累积生成、不用于再投资或企业日常管理运营支出的利息收入。</p>
 <p>从1月1日起，中小业主被动收入累积生成到5万元后，不再享受中小业主优惠税率。目前企业头笔50万元营收享受10%的优惠利率，但从1月1日起，被动收入超过5万元的中小业主，其头笔50万元营收不再享受10%优惠税率，具体利率将取决于金额具体超出多少。</p>
-<p>渥京此项改革，目的是鼓励企业主将被动收入进行再投资，或用于增聘人手，而不是让钱躺在账户上钱生钱。加拿大独立商会（CFIB）会长凯利（Dan Kelly）表示，这一税改是他最担心的变化之一，许多中小业主仍没意识到，许多中小企业都只能听从<ahref="https://github.com/lydclp3254/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%A8%8E%E5%B1%80%EF%BC%88cra%EF%BC%89.md#1">加拿大税局（CRA）</a>。</p>
+<p>渥京此项改革，目的是鼓励企业主将被动收入进行再投资，或用于增聘人手，而不是让钱躺在账户上钱生钱。加拿大独立商会（CFIB）会长凯利（Dan Kelly）表示，这一税改是他最担心的变化之一，许多中小业主仍没意识到，许多中小企业都只能听从<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%A8%8E%E5%B1%80%EF%BC%88cra%EF%BC%89.md#1">加拿大税局（CRA）</a>。</p>
 <h2>中小企业税率下调1%</h2>
 <p>与此同时，自由党终于兑现久远前的承诺，今年起中小企业税率从10%调低至9%。</p>
 <p>渥京估计，调低税率后，符合中小企业资格的10.7万年入中小业主每年能省税1,600元，真正意义上的中小企业，尤其是没什么被动收入的中小企业，最欢迎这项税改。</p>
 <p>渥太华Malenka Originals店店主巴克利（Katrina Barclay）女士称，去年是公司极其艰难的一年，为装修店面花了许多钱，税改后要是能省点钱用于企业再投资，就再好不过了。</p>
 <p>凯利则认为，被动收入税改影响太大，减再多税，中小业主们也感受不到什么优惠。</p>
 <h2>油价涨</h2>
-<p>今年政治上受指责最多的是联邦<ahref="https://github.com/lydclp3254/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>。从1月份起，至今还没制定省级碳税的省，渥京将按每吨温室气体排放征收20元的化石燃油碳税，然后每年上调10元，直到2022年上调至50元为止。过去，各省一直不交碳税、碳排放超过渥京最高排放规定的温室气体排放大户（大型工业厂房），也将从1月份起按规定缴纳碳税。</p>
-<p>这意味着从4月份起，油价及化石燃油相关服务价格会上涨。政府估计，被强征联邦<ahref="https://github.com/lydclp3254/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>的省份，每升汽油价格上涨4.42分，天然气价格每立方米上涨3.91分，丙烷每升价格上涨3.10分。当然，被强征碳税的省份，纳税人最终会拿到部分直接退税，具体退税金额，取决于各省规定和家庭人口。</p>
+<p>今年政治上受指责最多的是联邦<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>。从1月份起，至今还没制定省级碳税的省，渥京将按每吨温室气体排放征收20元的化石燃油碳税，然后每年上调10元，直到2022年上调至50元为止。过去，各省一直不交碳税、碳排放超过渥京最高排放规定的温室气体排放大户（大型工业厂房），也将从1月份起按规定缴纳碳税。</p>
+<p>这意味着从4月份起，油价及化石燃油相关服务价格会上涨。政府估计，被强征联邦<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%A2%B3%E7%A8%8E.md#1">碳税</a>的省份，每升汽油价格上涨4.42分，天然气价格每立方米上涨3.91分，丙烷每升价格上涨3.10分。当然，被强征碳税的省份，纳税人最终会拿到部分直接退税，具体退税金额，取决于各省规定和家庭人口。</p>
 <p>例如，安省普通家庭（按每家2.6口人计算）每年退税金额近300元，新布省普通家庭每年退税近248元，曼省和萨省分别为336元和598元。育空地区和努纳武特地区，因早就采取联邦碳税制，燃油上涨成本退税最终会直接返还给地区政府，而非个人或家庭。</p>
 <h2>其它税改和物价调整</h2>
 <p>邮费价格上调，国内邮费涨至1.05元，至美国邮费涨至1.27元，国际邮费涨至2.56元。</p>
@@ -35,47 +35,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/10/24/n10804699.md#1">特鲁多宣布碳税计划 省民或获退税</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/10/30/n10818590.md#1">追回不当福利领取 加拿大税局5年增收11亿</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/11/8/n10837920.md#1">税局骗子影响坏 真税局工作受干扰</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/11/13/n10849398.md#1">想利用出租亏损申报抵税？房东须知</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/11/21/n10865098.md#1">标准不一样 加拿大税局区别对待纳税人</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/5/n13069755.md#1">三领域专家探讨疫苗护照的潜在陷阱</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/5/n13069706.md#1">加拿大放松旅客防疫限制 新规定须知</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/5/n13069678.md#1">自由党用税金支付美国公司100万 引质疑</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/5/n13069690.md#1">新颖展览！说书讲述卡尔加里华人故事</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/4/n13067411.md#1">与中国合作疫苗合约破裂 加拿大没索赔</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/24/n10804699.md#1">特鲁多宣布碳税计划 省民或获退税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/30/n10818590.md#1">追回不当福利领取 加拿大税局5年增收11亿</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/11/8/n10837920.md#1">税局骗子影响坏 真税局工作受干扰</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/11/13/n10849398.md#1">想利用出租亏损申报抵税？房东须知</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/11/21/n10865098.md#1">标准不一样 加拿大税局区别对待纳税人</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740239.md#1">俄国关闭CBC莫斯科分社 取消记者认证</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740234.md#1">11年加拿大1,338起婴儿睡眠窒息致死事件</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740208.md#1">加拿大禁普京及千名俄国高官和军官入境</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740204.md#1">渥太华警察总长说他没要求用《紧急法》</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740129.md#1">食品和房价推动 加拿大通胀率攀升至6.8%</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/6/14/n13020872.md#1">【命理】彼此等候三十年的夫妻 结局夫荣妻贵</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/6/28/n13053550.md#1">【馨香雅句】雍正十二美人图  皇家仕女人文生活</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/6/29/n13056430.md#1">【未解之谜】“奋战50年”揭密UFO</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/1/n13061464.md#1">【未解之谜】唐山大地震生还者的濒死体验</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/6/24/n13044329.md#1">史上指画第一人梦中学技  妙画如何显神迹？</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/3/n13065355.md#1">【财商天下】动力电池污染 新能源汽车致命伤</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/5/n13068868.md#1">【新闻大家谈】党委书记暴打2院士 谁是后台？</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/6/19/n13033632.md#1">【思想领袖】约翰逊：美反转吁查实验室泄毒</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/3/n13065475.md#1">现身天安门党庆 重量级红后代名单曝光</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/2/n13064269.md#1">【远见快评】泄中共危机？习讲话美军强烈回应</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/3/n13065237.md#1">日本爆大规模泥石流 场面吓人 20人失踪</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/2/n13064291.md#1">胡歌原名用方言念很怪 粉丝见到字喊改回来</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/3/n13065098.md#1">XIUMIN与朴素贤今昔对比照 粉丝：只有我老了</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/2/n13064083.md#1">林青霞6个月减重12公斤 祈祷台湾家乡平安</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/3/n13065123.md#1">《明日战争》影评：战争的威胁 也可能来自遥远未来</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/4/n13067202.md#1">章子怡携两个女儿 冒雨捧场汪峰演唱会</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/5/8/n12932893.md#1">糖尿病是器官泡糖水里 轻忽5症状 小心要命并发症</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/2/n13063759.md#1">糖类和蛋白质是减肥良伴？超商食品3菜单轻松瘦</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/3/n13064952.md#1">【美食天堂】盐焗鸡做法～这样做最香！</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/2/n13063902.md#1">这些国家打疫苗后疫情升温 与中国疫苗有关？</a></li>
-<li><a href="https://github.com/lydclp3254/djy/blob/master/gb/21/7/4/n13066141.md#1">等了60年 美国70岁女子一圆洋基球童梦</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lydclp3254/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lydclp3254/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/1/n10946842.htm">新年伊始 加拿大几项重大税改生效</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/1/n10946842.htm">新年伊始 加拿大几项重大税改生效</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lydclp3254/djy/blob/master/gb/19/1/1/n10946842.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lydclp3254/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lydclp3254/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lydclp3254/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lydclp3254/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lydclp3254/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/1/1/n10946842.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
